# cmake_stm32_libopencm3_template

./: .gitignore  CMakeLists.txt  README.md  main.c  toolchain.cmake
